# EasyCTR-release

./: .gitignore  .ycm_extra_conf.py  .ycm_extra_conf.py.new  BUILD  BUILD.aimaker  BUILD.serving  BUILD.tf  CMakeLists.txt  README.md  build.sh  cpplint.sh  main.py  oh_easy_recall.sh  oh_my_go.sh  pack.sh
assembler/: CMakeLists.txt  assembler.cpp  assembler.h  column.cpp  column.h  conf_parser.cpp  conf_parser.h  data_transform.cpp  data_transform.h  feature.h  file_reader.cpp  file_reader.h  jsoncpp_helper.hpp  lua_sampler.cpp  lua_sampler.h  meta_manager.cpp  meta_manager.h  monitor_feature.h  stringpiece.cpp  stringpiece.h  triple_list_filter.cpp  triple_list_filter.h  utils.cpp  utils.h
common/: binary_crossentropy.py  common.py  define_flags.py  dice.py  focal_loss.py  gelu.py  log_label.py  mape_loss.py  mish.py  swish.py  transform.py  yellowfin.py
common/estimator/: README.md  head.py  linear.py  optimizers.py
data/: .gitignore  conf.py  conf_dtower.py  conf_generator.py  eval.txt  eval_files.txt  nce_items.txt  predict_keys.txt
data/dtower_dict/: i_ad_id.dict  i_ad_name.dict  i_advertiser_id.dict  i_age_tag.dict  i_app_id.dict  i_display_mode_id.dict  i_flow_type.dict  i_industry_id.dict  i_is_deeplink.dict  i_last_30day_pctr.stat  i_last_30day_pcvr.stat  i_last_3day_pctr.stat  i_last_3day_pcvr.stat  i_last_3day_smooth_ctr.stat  i_last_7day_pctr.stat  (+13 more)
demos/: conf.py  example.py  i_kd_union_tags.dict  run_demo.sh  u_kd_behavior_play_history_longv.dict
easyctr/: README.md  configure_extra_options.py  configure_label_fn.py  configure_loss_fn.py  configure_lr_and_opt.py  flags.py  generate_warmup_file.py  generate_warmup_file_easyrecall.py  generate_warmup_file_predictor.py  input_fn.py  model_slots_map.py  predictor_warmup_requests  tf_serving_warmup_requests  tf_serving_warmup_requests_easyrecall
ops/: CMakeLists.txt  assembler_kernels.cc  assembler_ops.cc
test/: CMakeLists.txt  bi_tempered_loss_test.py  focal_loss_test.py  test_args.py  test_assembler.cpp  test_assembler_ops.py  test_assembler_serialize.cpp  test_assembler_serialize.py  test_assembler_serving.py  test_bucketized_column.py  test_categorical_column.py  test_conf_parser.cpp  test_cross_column.py  test_embedding_column.py  test_indicator_column.py  test_input_fn.py  test_numeric_column.py  test_pretrained_embedding_column.py  test_random_access_file.cc  test_random_access_file.py  test_scheme.cpp  test_scheme.py  test_sequence_categorical_column_with_vocabulary_list.py  test_serving.py  test_serving_easyrecall.py  test_shared_embedding_column.py  test_spark_fuel.py  test_spark_fuel_hdfs.py  test_tesla_shell.py  test_text_line_dataset.py  test_textlinedataset.py  test_weighted_categorical_column.py
test/serving/: CMakeLists.txt  README.md  convert.py  load_saved_model.cpp
test/serving/ref/: ref.cpp
tools/: CMakeLists.txt  make_dist.sh
(+163 files in other folders)
